src/test/ui/span/issue-35987.stderr
error[E0404]: expected trait, found type parameter `Add`
  --> $DIR/issue-35987.rs:15:21
   |
15 | impl<T: Clone, Add> Add for Foo<T> {
   |                     ^^^ not a trait
   |
   = help: possible better candidate is found in another module, you can import it into scope:
             `use std::ops::Add;`

error: main function not found

error: cannot continue compilation due to previous error

